noinst_PROGRAMS = genl-find-family nfqueue monitor-addr-change dump-ip-addrs

genl_find_family_SOURCES = genl-find-family.c ../src/nl.c ../src/nl_gen.c
nfqueue_SOURCES = nfqueue.c ../src/nl.c ../src/nl_nf.c ../src/nl_nfqueue.c
monitor_addr_change_SOURCES = monitor-addr-change.c ../src/nl.c
dump_ip_addrs_SOURCES = dump-ip-addrs.c ../src/nl.c ../src/nl_ifaddr.c

